small refactor and bug fixes

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,13 +24,11 @@ split-debuginfo="unpacked"
 eframe = {version="0.33", features=["persistence"]}
 cfg-if = "1"
 egui_plot="*"
-wasm-bindgen-futures = "0.4"
 # evalexpr={path ="../../contrib/evalexpr"}
 evalexpr={git="https://github.com/vdrn/evalexpr"}
 
-smallvec="*"
+# smallvec="*"
 ahash={version="*",default-features=false, features=["std"]}
-parking_lot = "0.12"
 serde={version="1", features=["derive"]}
 serde_json="1"
 urlencoding="2"
@@ -44,9 +42,115 @@ puffin_http = {version="*"}
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 web-sys = { version = "0.3", features = ["Window", "Location", "History"] }
 console_error_panic_hook = "0.1"
+wasm-bindgen-futures = "0.4"
 
 [target.'cfg(target_os = "windows")'.build-dependencies]
 winres = "0.1"
 
 [package.metadata.winres]
 OriginalFilename = "rust_graph.exe"
+
+
+
+[lints.rust]
+# unused_crate_dependencies="warn"
+ambiguous-negative-literals="warn"
+deref_into_dyn_supertrait="warn"
+explicit_outlives_requirements="warn"
+let_underscore_drop="warn"
+redundant_lifetimes="warn"
+unit_bindings="warn"
+unused_must_use = "warn"
+
+[lints.clippy]
+
+# ### Cleanup
+todo ="warn"
+unimplemented ="warn"
+# undocumented_unsafe_blocks = "warn"
+# print_stderr ="warn"
+# print_stdout ="warn"
+
+# ### Too restrictive but still useful
+# debug_assert_with_mut_call ="warn"
+# needless_pass_by_value ="warn"
+# redundant_closure_for_method_calls="warn"
+# unreadable_literal ="warn" 
+# manual_assert ="warn"
+integer_division = "warn" # Problem with this is that we would want to allow division with constants
+
+# ### Warnings/Denys
+large_stack_frames = "warn"
+exit ="warn"
+panic_in_result_fn ="warn"
+unused_peekable = "warn" 
+unnecessary_join = "warn"
+single_match_else = "warn"
+single_option_map = "warn"
+return_self_not_must_use = "warn"
+cast_ptr_alignment = "warn"
+enum_glob_use = "warn"
+fallible_impl_from = "warn"
+std_instead_of_alloc = "warn"
+std_instead_of_core = "warn"
+alloc_instead_of_core = "warn"
+expl_impl_clone_on_copy = "warn"
+borrow_as_ptr = "warn"
+explicit_into_iter_loop = "warn"
+filter_map_next ="warn"
+format_collect ="warn"
+format_push_string ="warn"
+implicit_clone="warn"
+inefficient_to_string="warn"
+iter_filter_is_some ="warn"
+iter_filter_is_ok="warn"
+iter_on_empty_collections="warn"
+manual_is_power_of_two="warn"
+match_bool="warn"
+unused_self ="warn"
+cloned_instead_of_copied  = "warn"
+trivially_copy_pass_by_ref = "warn"
+manual_instant_elapsed ="warn"
+manual_let_else ="warn"
+manual_string_new ="warn"
+map_with_unused_argument_over_ranges="warn"
+mem_forget ="warn"
+mismatching_type_param_order ="warn"
+modulo_arithmetic ="warn"
+needless_collect ="warn"
+needless_continue ="warn"
+needless_for_each ="warn"
+needless_pass_by_ref_mut ="warn"
+or_fun_call ="warn"
+no_effect_underscore_binding ="warn"
+non_send_fields_in_send_ty ="warn"
+non_zero_suggestions ="warn"
+precedence_bits ="warn"
+option_as_ref_cloned ="warn"
+rc_buffer ="warn"
+redundant_else ="warn"
+redundant_clone ="warn"
+redundant_pub_crate ="warn"
+ref_option ="warn"
+ref_option_ref ="warn"
+renamed_function_params ="warn"
+same_name_method ="warn"
+set_contains_or_insert ="warn"
+significant_drop_in_scrutinee = "warn"
+stable_sort_primitive ="warn"
+string_lit_chars_any ="warn"
+trait_duplication_in_bounds ="warn"
+transmute_undefined_repr ="warn"
+type_repetition_in_bounds ="warn"
+unchecked_duration_subtraction ="warn"
+unnecessary_wraps ="warn"
+unused_async ="warn"
+unused_result_ok ="warn"
+
+### Allows
+let_and_return = "allow" # this is just a bad lint
+new_without_default = "allow" # no thanks
+collapsible_if = "allow" # too strict. too much trouble `allow`ing it.
+collapsible_else_if = "allow" # same as `collapsible_if`
+tabs_in_doc_comments = "allow" # `rustfmt` automatically uses tabs for doc comments when `hard_tabs = true`
+needless_range_loop="allow" # useful but not always
