--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,3 @@
-# cargo-features = ["profile-rustflags"]
 [package]
 name = "rust_graph"
 version = "0.1.0"
@@ -10,39 +9,40 @@ readme = "README.md"
 repository = "https://github.com/vdrn/rust_graph"
 build = "build.rs"
 
-
 [lib]
 crate-type = ["cdylib", "rlib"]
+
+[features]
+puffin = ["dep:puffin_http", "dep:puffin"]
+default = []
 
 [profile.profiling]
 inherits = "release"
 debug = "line-tables-only"
 split-debuginfo="unpacked"
-# rustflags=[ "-C", "force-frame-pointers=yes" ]
 
 [dependencies]
-eframe = {version="0.33", features=["persistence"]}
+eframe = { version = "0.33", features=["persistence"] }
 cfg-if = "1"
-egui_plot="*"
+egui_plot="0.34"
 # evalexpr={path ="../../contrib/evalexpr"}
-evalexpr={git="https://github.com/vdrn/evalexpr"}
+evalexpr = { git = "https://github.com/vdrn/evalexpr" }
 
-# smallvec="*"
-ahash={version="*",default-features=false, features=["std"]}
-serde={version="1", features=["derive"]}
-serde_json="1"
-urlencoding="2"
-puffin = {version="*"}
+ahash = { version = "0.8", default-features = false, features = ["std"] }
+serde = { version = "1", features = ["derive"]}
+serde_json = "1"
+urlencoding = "2"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 # puffin = {path="../../contrib/puffin/puffin", features=["quanta"]  }
 # puffin_http = {path="../../contrib/puffin/puffin_http" }
-puffin_http = {version="*"}
+puffin = { version = "0.19", optional = true }
+puffin_http = { version = "0.16", optional = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
+wasm-bindgen-futures = "0.4"
 web-sys = { version = "0.3", features = ["Window", "Location", "History"] }
 console_error_panic_hook = "0.1"
-wasm-bindgen-futures = "0.4"
 
 [target.'cfg(target_os = "windows")'.build-dependencies]
 winres = "0.1"
@@ -64,14 +64,12 @@ unused_must_use = "warn"
 
 [lints.clippy]
 
-# ### Cleanup
 todo ="warn"
 unimplemented ="warn"
 # undocumented_unsafe_blocks = "warn"
 # print_stderr ="warn"
 # print_stdout ="warn"
 
-# ### Too restrictive but still useful
 # debug_assert_with_mut_call ="warn"
 # needless_pass_by_value ="warn"
 # redundant_closure_for_method_calls="warn"
