--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,15 +21,20 @@ inherits = "release"
 debug = "line-tables-only"
 split-debuginfo="unpacked"
 
+# The profile that 'dist' will build with
+[profile.dist]
+inherits = "release"
+lto = "thin"
+
 [dependencies]
-eframe = { version = "0.33", features=["persistence"] }
+eframe = { version = "0.33",features=["persistence"] }
 cfg-if = "1"
 egui_plot="0.34"
 # evalexpr={path ="../../contrib/evalexpr"}
 evalexpr = { git = "https://github.com/vdrn/evalexpr" }
 
-ahash = { version = "0.8", default-features = false, features = ["std"] }
-serde = { version = "1", features = ["derive"]}
+ahash = { version = "0.8", default-features = false, features = [ "no-rng","std"] }
+serde = { version = "1" }
 serde_json = "1"
 urlencoding = "2"
 
@@ -50,6 +55,12 @@ winres = "0.1"
 [package.metadata.winres]
 OriginalFilename = "rust_graph.exe"
 
+[package.metadata.wix]
+upgrade-guid = "F5A5E32F-2040-48A4-8A21-5F9C03F92F9E"
+path-guid = "01BA2970-B62C-42B7-B886-739A22943DF0"
+license = false
+eula = false
+
 
 
 [lints.rust]
@@ -66,7 +77,7 @@ unused_must_use = "warn"
 
 todo ="warn"
 unimplemented ="warn"
-# undocumented_unsafe_blocks = "warn"
+undocumented_unsafe_blocks = "warn"
 # print_stderr ="warn"
 # print_stdout ="warn"
 
