--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rust_graph"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2024"
 authors = ["Vedran Maric <valinion@gmail.com>"]
 description = "Graphing calculator with f32 support."
@@ -30,7 +30,6 @@ lto = "thin"
 eframe = { version = "0.33",features=["persistence"] }
 cfg-if = "1"
 egui_plot="0.34"
-# evalexpr={path ="../../contrib/evalexpr"}
 evalexpr = { git = "https://github.com/vdrn/evalexpr" }
 
 ahash = { version = "0.8", default-features = false, features = [ "no-rng","std"] }
@@ -38,9 +37,13 @@ serde = { version = "1" }
 serde_json = "1"
 urlencoding = "2"
 
+# [patch."https://github.com/vdrn/evalexpr"]
+# evalexpr = { path = "../../contrib/evalexpr" }
+# [patch.crates-io]
+# puffin = { path = "../../contrib/puffin/puffin" }
+# puffin_http = { path = "../../contrib/puffin/puffin_http" }
+
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-# puffin = {path="../../contrib/puffin/puffin", features=["quanta"]  }
-# puffin_http = {path="../../contrib/puffin/puffin_http" }
 puffin = { version = "0.19", optional = true }
 puffin_http = { version = "0.16", optional = true }
 
@@ -130,7 +133,7 @@ needless_collect ="warn"
 needless_continue ="warn"
 needless_for_each ="warn"
 needless_pass_by_ref_mut ="warn"
-or_fun_call ="warn"
+# or_fun_call ="warn"
 no_effect_underscore_binding ="warn"
 non_send_fields_in_send_ty ="warn"
 non_zero_suggestions ="warn"
