--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ ahash = { version = "0.8", default-features = false, features = [ "no-rng","std"
 serde = { version = "1" }
 serde_json = "1"
 urlencoding = "2"
-
+egui_dnd="0.14"
 # [patch."https://github.com/vdrn/evalexpr"]
 # evalexpr = { path = "../../contrib/evalexpr" }
 # [patch.crates-io]
