--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,11 +35,13 @@ evalexpr = { git = "https://github.com/vdrn/evalexpr" }
 ahash = { version = "0.8", default-features = false, features = [ "no-rng","std"] }
 serde = { version = "1" }
 serde_json = "1"
-urlencoding = "2"
+# urlencoding = "2"
 egui_dnd="0.14"
-# serde_urlencoded="0.7"
 bincode={version="2", features=["serde"]}
 base64="0.22"
+arrayvec = "0.7"
+smallvec = {version = "1.15", features = ["union"]}
+
 # [patch."https://github.com/vdrn/evalexpr"]
 # evalexpr = { path = "../../contrib/evalexpr" }
 # [patch.crates-io]
