--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,7 @@ arrayvec = "0.7"
 smallvec = {version = "1.15", features = ["union"]}
 rayon={version="1", features=["web_spin_lock"]}
 thread_local="1"
+regex = "1"
 # wasm-bindgen = "0.2.99"
 
 # [patch."https://github.com/vdrn/evalexpr"]
