draw intersection points and optima

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -3,7 +3,16 @@ build-std = ["panic_abort", "std"]
 [rust]
 [build]
 [target.wasm32-unknown-unknown]
-rustflags = ["-C", "target-feature=+atomics,+bulk-memory"]
+rustflags = [
+  "-C", "target-feature=+atomics,+bulk-memory",
+  "-Clink-arg=--shared-memory",
+ "-Clink-arg=--max-memory=1073741824",
+ "-Clink-arg=--import-memory",
+ "-Clink-arg=--export=__wasm_init_tls",
+ "-Clink-arg=--export=__tls_size",
+ "-Clink-arg=--export=__tls_align",
+ "-Clink-arg=--export=__tls_base"
+]
 
 [target.x86_64-unknown-linux-gnu]
 linker = "clang"
