--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
 name = "rust_graph"
-version = "0.3.3"
+version = "0.3.4"
 edition = "2024"
 authors = ["Vedran Maric <valinion@gmail.com>"]
 description = "Graphing calculator with f32 support."
@@ -16,6 +16,10 @@ crate-type = ["cdylib", "rlib"]
 [features]
 puffin = ["dep:puffin_http", "dep:puffin"]
 default = []
+
+[profile.release]
+# debug-assertions = true
+# debug="line-tables-only"
 
 [profile.profiling]
 inherits = "release"
@@ -44,10 +48,12 @@ smallvec = {version = "1", features = ["union"]}
 rayon={version="1", features=["web_spin_lock"]}
 thread_local="1"
 regex = "1"
+# debug-cell="*"
 
 # [patch."https://github.com/vdrn/evalexpr"]
 # evalexpr = { path = "../../contrib/evalexpr" }
 # [patch.crates-io]
+# egui_plot = { path = "../../contrib/egui_plot/egui_plot" }
 # puffin = { path = "../../contrib/puffin/puffin" }
 # puffin_http = { path = "../../contrib/puffin/puffin_http" }
 
