Derivatives, line arrows and bug fixes:
- support derivatives
- support drawing line arrows
- fix function value dragging ui
- fixes to point dragging
- fix folder compilation error display
- fix bug with marching squares zero length segments

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -53,8 +53,8 @@ thread_local="1"
 regex = "1"
 # debug-cell="*"
 
-# [patch."https://github.com/vdrn/evalexpr"]
-# evalexpr = { path = "../../contrib/evalexpr" }
+[patch."https://github.com/vdrn/evalexpr"]
+evalexpr = { path = "../../contrib/evalexpr" }
 [patch.crates-io]
 # egui_plot = { path = "../../contrib/egui_plot/egui_plot" }
 # puffin = { path = "../../contrib/puffin/puffin" }
