--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rust_graph"
-version = "0.5.1"
+version = "0.5.2"
 edition = "2024"
 authors = ["Vedran Maric <valinion@gmail.com>"]
 description = "Graphing calculator with f32 support."
@@ -53,8 +53,9 @@ smallvec = {version = "1", features = ["union"]}
 rayon={version="1", features=["web_spin_lock"]}
 thread_local="1"
 regex = "1"
+# needed so dependencies downstream can compile to wasm
+getrandom = { version = "0.3", features = ["wasm_js"] }
 # debug-cell="*"
-mimalloc = { version = "0.1"}
 [patch."https://github.com/vdrn/evalexpr"]
 # evalexpr = { path = "../../contrib/evalexpr" }
 [patch.crates-io]
