--- a/evalexpr/Cargo.toml
+++ b/evalexpr/Cargo.toml
@@ -50,3 +50,4 @@ rand_pcg = "0.3.1"
 unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
 [lints.clippy]
 collapsible_else_if = "allow"
+tabs_in_doc_comments = "allow"
