Bunch of minor updates:
- support symbols for infinity, pi, integrals, sums and products
- support infinite integrals and fix diverging integral calculation
- improve human float display
- prevent defining function/constant names that are same as builtins or already defined
- improve expression error reporting
- refactor entry processing fns a bit

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,6 +56,7 @@ thread_local="1"
 regex = "1"
 # needed so dependencies downstream can compile to wasm
 getrandom = { version = "0.3", features = ["wasm_js"] }
+# egui_nerdfonts = {path = "../../contrib/egui_nerdfonts"}
 # debug-cell="*"
 [patch.crates-io]
 # egui_plot = { path = "../../contrib/egui_plot/egui_plot" }
