WIP: rework special operators
- Rework how special operators (Map,If,Product,Sum,Integral) are implemented: use new ClosureNode for all of them
- replace If function with if operator that supports recursion
- Bug fixes:
  - Fix wrong clamp fn params when inlining
  - Fix point dragging precission

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -125,7 +125,7 @@ integer_division = "warn" # Problem with this is that we would want to allow div
 # ### Warnings/Denys
 large_stack_frames = "warn"
 exit ="warn"
-panic_in_result_fn ="warn"
+# panic_in_result_fn ="warn"
 unused_peekable = "warn" 
 unnecessary_join = "warn"
 single_match_else = "warn"
